Remove: invalid string in Cargo.toml of emb-sys

--- a/embeddedsw-sys/Cargo.toml
+++ b/embeddedsw-sys/Cargo.toml
@@ -3,7 +3,7 @@ name = "embeddedsw-sys"
 version = "0.1.0"
 edition = "2021"
 authors = ["kazuki ikemori (kadu-v)"]
-license = "0"
+license = ""
 descritpion = """
 Bindings to Xilinx's zynq driver for bearmetal applications.
 """
