--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ categories = ["api-bindings"]
 [features]
 default = []
 xilffs = ["embeddedsw-sys/xilffs"]
+xaxidma = ["embeddedsw-sys/xaxidma"]
 
 [dependencies]
 embeddedsw-sys = { path = "./embeddedsw-sys" }
